assets/fetools/fetools.css
div#sw-fetools {
	z-index:10000;
	position:fixed;
	top:40px;
	left:-200px;
	width:200px;
	border-right: 2px solid #efefef;
	border-bottom: 2px solid #efefef;
	background-color:#2c2c2c;
}
div#sw-fetools div.sw-handle {
	background-color:#2c2c2c;
	background-image:-moz-linear-gradient(top, #333333, #222222);
	background-image:-ms-linear-gradient(top, #333333, #222222);
	background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
	background-image:-webkit-linear-gradient(top, #333333, #222222);
	background-image:-o-linear-gradient(top, #333333, #222222);
	background-image:linear-gradient(top, #333333, #222222);
	background-repeat:repeat-x;
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
	width:238px;
	height:30px;
}
div#sw-fetools a.sw-logo {
	display:block;
	height:16px !important;
	width:238px !important;
	float:right;
	background-image: url('fetools.logo.png');
	background-repeat: no-repeat;
	margin-top:6px;
	margin-right:0px;
}
div#sw-fetools ul.sw-menu {
	list-style:none;
	padding:10px 0px 5px 0px;
	margin:0px;
}
div#sw-fetools ul.sw-menu li {
	padding:0px;
	margin:0px;
}
div#sw-fetools ul.sw-menu li.divider {
	height:1px;
	margin:1px 8px;
	overflow:hidden;
	background-color:#232323;
	border-bottom:1px solid #000000;
	*width:100%;
	*margin:-5px 0 5px;
}
div#sw-fetools ul.sw-menu li a {
	display: block;
	padding: 5px 15px;
	color: #cccccc;
	font-size:12px;
}
div#sw-fetools ul.sw-menu li a.active {
	color:#ffffff;
}
div#sw-fetools ul.sw-menu li a:hover {
	text-decoration:none;
	color: #ffffff;
}
div#sw-fetools ul.sw-menu li ul {
	display:none;
	list-style:none;
	padding:10px 0px 10px 0px;
	margin:0px;
	background: #e3e3e3;	
}
div#sw-fetools ul.sw-menu li ul.open {
	display:block;
}
div#sw-fetools ul.sw-menu li ul li a {
	padding: 3px 15px;
	color:#0088cc;
	text-decoration:none;
	font-size:11px;
}
div#sw-fetools ul.sw-menu li ul li a:hover {
	color:#005580;
	text-decoration:underline;
}

div#sw-fetools ul.sw-menu .icon {
	display:inline-block;
	width:14px;
	height:14px;
	line-height:14px;
	vertical-align:text-top;
	background-position:14px 14px;
	background-repeat:no-repeat;
	*margin-right:.3em;
	background-image:url("../img/glyphicons-halflings-white.png");	
}

div#sw-fetools ul.sw-menu .icon-tags {background-position:-25px -48px;}
div#sw-fetools ul.sw-menu .icon-file {background-position:-24px -24px;}
div#sw-fetools ul.sw-menu .icon-inbox{background-position:-168px -24px;}
div#sw-fetools ul.sw-menu .icon-user{background-position:-168px 0;}
div#sw-fetools ul.sw-menu .icon-random{background-position:-216px -120px;}

